# Cmake_app

./: CMakeCache.txt  Makefile  cmake_install.cmake  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/cmake_app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/tf-lite-api/include/tensorflow/lite/experimental/acceleration/compatibility/: variables.h
app/src/main/java/com/example/cmake_app/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/cmake_app/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
